--- a/src/app/pages/tables/SalesList/SalesList.html
+++ b/src/app/pages/tables/SalesList/SalesList.html
@@ -30,7 +30,8 @@
                        <br/>
                <h5 style="margin-left: 50px;">Customer Information:</h5>
 
-               <table style="margin-left: 100px;">
+                       <div ba-panel style="width: 80%;margin-left: 100px;">
+               <table >
                 <tr>
                     <th style="width: 200px"><b>Name:</b></th><td style="text-align: left;width: 400px;">{{item.customer.firstName + '' + item.customer.lastName}}</td>
                     <th style="width: 200px"><b>Email:</b></th><td style="width: 400px">{{item.customer.email}}</td>
@@ -43,11 +44,12 @@
                        <th style="width: 200px"><b>Phone Number:</b></th><td style="text-align: left;width: 400px;">{{item.customer.phoneNumber}}</td>
                        <th style="width: 200px"><b>Balance:</b></th><td style="width: 400px">{{item.customer.balance}}</td>
                    </tr>
-               </table>
+               </table></div>
 
                <br/><br/>
                <h5 style="margin-left: 50px;">Product Information:</h5>
-            <div style="margin-left: 100px;">
+            <div ba-panel style="width: 80%;margin-left: 100px;">
+
             <table><tr>
                 <th style="width: 200px"><b>Product</b></th>
                 <th style="width: 200px"><b>Actual Price</b></th>
@@ -68,7 +70,8 @@
             </div>
                <br/><br/>
                <h5 style="margin-left: 50px;">Payment Information:</h5>
-            <table style="margin-left: 100px;">
+                       <div ba-panel style="width: 80%;margin-left: 100px;">
+            <table>
                    <tr>
                        <th style="width: 200px"><b>Advance Payment:</b></th><td style="text-align: left;width: 200px;">{{item.advancePayment}}</td>
                    </tr>
@@ -78,7 +81,7 @@
                 <tr>
                     <th style="width: 200px"><b>Cash Payment:</b></th><td style="text-align: left;width: 200px;">{{item.advancePayment}}</td>
                 </tr>
-               </table>
+               </table></div>
                    </div></div>
            </td>
         </tr>
