added loading animation while waiting for Http response.

--- a/src/app/pages/Invoice/FFInvoice.html
+++ b/src/app/pages/Invoice/FFInvoice.html
@@ -1,4 +1,9 @@
 
+<p class="text-center text-muted" if-loading>
+    <span class="fa fa-spinner fa-spin fa-3x"></span>
+    <br /><br />
+    Loading, please wait...
+</p>
 <div>
     <section class="row" ng-controller="FFInvoiceController" ba-panel ba-panel-class="with-scroll">
 
