--- a/src/app/pages/tables/Customer/ListCustomer.html
+++ b/src/app/pages/tables/Customer/ListCustomer.html
@@ -87,4 +87,9 @@
             </tr>
         </table>
     </div>
+    <p class="text-center text-muted" if-loading>
+        <span class="fa fa-spinner fa-spin fa-3x"></span>
+        <br /><br />
+        Loading, please wait...
+    </p>
 </div>
