--- a/src/app/pages/tables/Employee/ListEmployee.html
+++ b/src/app/pages/tables/Employee/ListEmployee.html
@@ -1,12 +1,5 @@
 <div class="horizontal-scroll" ng-init="loadEmployees()" ba-panel ba-panel-class="with-scroll">
     <input type="text" ng-model="searchEmployee" placeholder="Search here" class="form-control">
-    <!-- <div class="form-group select-page-size-wrap ">
-       <label>Rows on page
-         <select class="form-control selectpicker show-tick" title="Rows on page" selectpicker
-                 ng-model="smartTablePageSize" ng-options="i for i in [5,10,15,20,25]">
-         </select>
-       </label>
-     </div>-->
     <table class="table" >
         <thead>
         <tr class="sortable ">
@@ -19,21 +12,6 @@
             <th>Employee Over Time Rate </th>
             <th>Employee salary Per Month </th>
         </tr>
-       <!-- <tr>
-             <th></th>
-             <th><input st-search="id" placeholder="Search Sale ID" class="input-sm form-control search-input"
-                        type="search"/></th>
-             <th><input st-search="name" placeholder="Search Customer Name" class="input-sm form-control search-input"
-                        type="search"/></th>
-             <th><input st-search="price" placeholder="Search Total Amount" class="input-sm form-control search-input"
-                        type="search"/></th>
-             <th><input st-search="productCode" placeholder="Search Advance Payment" class="input-sm form-control search-input" type="search"/>
-             </th>
-             <th><input st-search="unit" placeholder="Search Sale Date" class="input-sm form-control search-input" type="search"/>
-             </th>
-             <th><input st-search="updatedOn" placeholder="Search Delivery Date" class="input-sm form-control search-input" type="search"/>
-             </th>
-        </tr>-->
         </thead>
         <tbody>
         <tr ng-repeat="item in employeeData | filter: searchEmployee">
@@ -46,13 +24,14 @@
             <td>{{item.joinDate}}</td>
             <td>{{item.overTimeRate}}</td>
             <td>{{item.perMonthSalary}}</td>
-
-
         </tr>
         </tbody>
         <tfoot>
         </tfoot>
     </table>
-
-
+    <p class="text-center text-muted" if-loading>
+        <span class="fa fa-spinner fa-spin fa-3x"></span>
+        <br /><br />
+        Loading, please wait...
+    </p>
 </div>
