--- a/src/app/pages/tables/EmployeeSalary/EmployeeSalary.html
+++ b/src/app/pages/tables/EmployeeSalary/EmployeeSalary.html
@@ -24,6 +24,9 @@
         <tfoot>
         </tfoot>
     </table>
-
-
+    <p class="text-center text-muted" if-loading>
+        <span class="fa fa-spinner fa-spin fa-3x"></span>
+        <br /><br />
+        Loading, please wait...
+    </p>
 </div>
