--- a/src/app/pages/tables/SalesList/SalesList.html
+++ b/src/app/pages/tables/SalesList/SalesList.html
@@ -84,4 +84,10 @@
         </tr>
     </table> </div>
 
+    <p class="text-center text-muted" if-loading>
+        <span class="fa fa-spinner fa-spin fa-3x"></span>
+        <br /><br />
+        Loading, please wait...
+    </p>
+
 </div>
