--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -48,7 +48,7 @@
   </div>
   <div class="col-xlg-6 col-lg-6 col-md-6 col-xs-12"
        ba-panel
-       ba-panel-title="Calendar"
+       ba-panel-title="Sales To Be Deliver Today"
        ba-panel-class="xmedium-panel feed-comply-panel with-scroll calendar-panel">
     <dashboard-calendar></dashboard-calendar>
   </div>
