--- a/src/app/pages/tables/Customer/ListCustomer.html
+++ b/src/app/pages/tables/Customer/ListCustomer.html
@@ -5,7 +5,7 @@
         <tr >
             <th>Customer ID</th>
             <th>Customer First Name</th>
-            <th>Customer Last Name</th>
+            <!--<th>Customer Last Name</th>-->
             <th>Customer Email </th>
             <th>Customer Address </th>
             <th>Customer City </th>
